# -RoutineTestCode

./: .gitignore  README.md
ConstPtrTest/: CMakeLists.txt  const_ptr_test.cpp  const_ptr_test.cpp.orig
DeriveClassCast/: CMakeLists.txt  derive_class_cast.cpp
DoxygenTest/: Doxyfile  gccFunctionReturnTest  gccFunctionReturnTest.cpp
DoxygenTest/html/: annotated.html  annotated_dup.js  classC-members.html  classC.html  classC__Base-members.html  classC__Base.html  classC__Base.js  classC__Base__inherit__graph.md5  classC__inherit__graph.md5  classes.html  files.html  files.js  gccFunctionReturnTest_8cpp.html  gccFunctionReturnTest_8cpp.js  gccFunctionReturnTest_8cpp__incl.md5  globals.html  globals_func.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_0.md5  inherits.html  navtreedata.js  navtreeindex0.js
DoxygenTest/html/search/: all_3.js  classes_0.js  files_0.js  functions_0.js  searchdata.js
InheritClassTest/: inheritClassTest.cpp  inheritTest
IpmlTest/: A.cpp  A.hpp  A_impl.cpp  A_impl.hpp  B.cpp  B.hpp  B_impl.cpp  B_impl.hpp  CMakeLists.txt  RoutineTest.kdev4  main.cpp
OpenMPTest/: OpenMP_Test  OpenMP_Test.cpp
arm_opencv_test/: .ycm_extra_conf.py  CMakeLists.txt  main.cpp
arm_opencv_test/cmake/: Toolchain-arm-linux-gnueabihf.cmake
boost_pragram_option_test/: CMakeLists.txt  main.cpp
boost_pragram_option_test/.kdev4/: _custom.kdev4  boost_pragram_option_test.kdev4
boyer_moore_string_search/: CMakeLists.txt  boyer_moore_string_search.cpp  boyer_moore_string_search.h
cxx_pragram_option_test/: CMakeLists.txt  cxx_program_option_test.c
dlib_face_landmark_arm/: .ycm_extra_conf.py  CMakeLists.txt  main.cpp
dlib_face_landmark_test/: CMakeLists.txt  main.cpp  path.txt
eigenTest/: .ycm_extra_conf.py  CMakeLists.txt  eigenTest.cpp
enumTest/: enumTest.c
float2int_3type/: floa2int_3type.c
grammar_test/: a.c
hog_neon/: hog_neon.c  hog_neon.h
hog_neon/util/: cvt_binary_to_img.py  cvt_img_to_binary_file.py  img_binary
kalman_filter_test/: kalman_filter_test.cpp
killedTest/: killed.cpp
lambda_test/: lambda_test.cpp
list_sort/: CMakeLists.txt  main.cpp
logging4me/: logging4me.c
loop_include/: CMakeLists.txt  a.h  b.h  main.c
map_visit_delete/: CMakeLists.txt  main.cpp
memoryAccessTest/: CMakeLists.txt  memoryAccessTest.cpp
mm_assert/: mm_assert.c  mm_assert.h
move_file_on_writting/: move_file_on_writting.c
protobuf_test/: address.pb.cc  address.pb.h  address.proto  bitfile  imgShowTest.cpp  read  read.cpp  readme.md  testProto.cpp  write
protobuf_test/cmakeTest/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.h  main.cpp
pythonTest/: Untitled.ipynb  python_test_20170524.ipynb  test_20170826.ipynb
pythonTest/processBarTest/: ProcessBarTest.py
pythonTest/pycharmTest/: helloworld.py
scones_test/: .sconsign.dblite  helloscons  helloscons.c
static_test/: .ycm_extra_conf.py  CMakeLists.txt  a.cpp  b.cpp  b.h  staticTest  tags
static_test/noBH/: CMakeLists.txt  main.cpp  test
stl_algrithm_test/: CMakeLists.txt  stl_algrithm_test.cpp
structTest/: structTest.c  structTest.cpp
template_test/: template_test.cpp
tuple_test/: CMakeLists.txt  main.cpp
variable-argument-test/: variable_arg_test.c
wav_play/: dr_wav.h  main.c
